--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/Users/autumnpitkin/Desktop/Week 3 Coding Challenge/assets/main.css">
 </head>
 <body>
+  <h1>Welcome to Week 4!</h1>
   <section class="cards">
     <article class="card card--featured">
       <h1 class="card__title">Zygnematales</h1>
